--- a/P001792.opf/meta.yml
+++ b/P001792.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W8LS20570
   title: ལིའུ་ཧྲའོ་ཆི་ཡི་གཏམ་རྒྱུད།
   author: ''
-  volumes: {}
+  volumes:
+    c0a01a71f3ab4c2d9ec98f874abd94d1:
+      image_group_id: I8LS20572
+      title: ''
+      volume_number: 1
+      total_pages: 393
