--- a/P001792.opf/layers/v001/Pagination.yml
+++ b/P001792.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: fab951b27eb442a99ef7487bc95673c9
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   7dfcff693ad9469c861d9e574b47c3e0:
