--- a/P001792.opf/meta.yml
+++ b/P001792.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P001792
 initial_creation_type: ocr
+created_at: 27/03/2020
+last_modified_at: 24/11/2021
 source_metadata:
   id: bdr:W8LS20570
   title: ལིའུ་ཧྲའོ་ཆི་ཡི་གཏམ་རྒྱུད།
