--- a/P001792.opf/meta.yml
+++ b/P001792.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P001792
 initial_creation_type: ocr
 created_at: 27/03/2020
-last_modified_at: 24/11/2021
+last_modified_at: 2021-12-17 10:21:55.048493
 source_metadata:
   id: bdr:W8LS20570
   title: ལིའུ་ཧྲའོ་ཆི་ཡི་གཏམ་རྒྱུད།
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 393
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessFairUse
+  restrictedInChina: false
